--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
     </repositories>
-    <groupId>org.bettervm.collabcraft</groupId>
+    <groupId>io.papermc.collabcraft</groupId>
     <artifactId>collabcraft</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <modelVersion>4.0.0</modelVersion>
     <dependencies>
         <dependency>
