--- a/src/main/java/resources/plugin.yml
+++ b/src/main/java/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: collabcraft
-version: 1.2.2
+version: 1.3
 main: io.papermc.collabcraft.collabcraft
 commands:
   bypassturn:
@@ -28,4 +28,4 @@ permissions:
     default: op
   collabcraft.standard:
     description: Commands for basic users
-    default: not op
+    default: true
